# cxpoc

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
design/: approach-and-evaluation-notes-v0.1.md  document-parsing-pipeline-design-v1.1.md  eval-harness-and-gold-set-v0.1.md
eval/: __init__.py  crosscheck.py  features.py  harness.py  landing_ai.py  landing_map.py  materialize.py  mine_candidates.py  predict.py  run_eval.py  stratify.py  taxonomy.py  viewer.py
eval/metrics/: __init__.py  layout.py  table.py  text.py
eval/static/: app.js  index.html  styles.css
gold/v1/: gold_manifest.json  scorecard_v1.json  silver_landing_ai.json
gold/v1/TSLA-2017__p0139/: textlayer.json
gold/v1/TSLA-2017__p0141/: textlayer.json
gold/v1/TSLA-2017__p0142/: textlayer.json
gold/v1/TSLA-2018__p0156/: textlayer.json
gold/v1/TSLA-2018__p0157/: textlayer.json
gold/v1/TSLA-2018__p0160/: textlayer.json
gold/v1/TSLA-2019__p0108/: textlayer.json
gold/v1/TSLA-2019__p0154/: textlayer.json
gold/v1/TSLA-2019__p0157/: textlayer.json
gold/v1/TSLA-2020__p0077/: textlayer.json
gold/v1/TSLA-2020__p0089/: textlayer.json
gold/v1/TSLA-2020__p0111/: textlayer.json
gold/v1/TSLA-2021__p0045/: textlayer.json
gold/v1/TSLA-2021__p0080/: textlayer.json
gold/v1/TSLA-2021__p0081/: textlayer.json
gold/v1/TSLA-2022__p0040/: textlayer.json
gold/v1/TSLA-2022__p0074/: textlayer.json
gold/v1/TSLA-2022__p0076/: textlayer.json
gold/v1/TSLA-2023__p0072/: textlayer.json
gold/v1/TSLA-2023__p0079/: textlayer.json
gold/v1/TSLA-2024__p0065/: textlayer.json
gold/v1/TSLA-2024__p0080/: textlayer.json
gold/v1/TSLA-2024__p0081/: textlayer.json
gold/v1/TSLA-2025__p0042/: textlayer.json
gold/v1/TSLA-2025__p0075/: textlayer.json
gold/v1/TSLA-2025__p0080/: textlayer.json
gold/v1/inspiron-1100_ownersmanual_en-us__p0010/: textlayer.json
gold/v1/inspiron-1100_ownersmanual_en-us__p0074/: textlayer.json
gold/v1/inspiron-1100_ownersmanual_en-us__p0081/: textlayer.json
gold/v1/inspiron-1100_servicemanual_en-us__p0008/: textlayer.json
gold/v1/inspiron-1100_servicemanual_en-us__p0022/: textlayer.json
gold/v1/inspiron-1100_servicemanual_en-us__p0028/: textlayer.json
gold/v1/inspiron-1100_setupguide2_en-us__p0027/: textlayer.json
gold/v1/inspiron-1100_setupguide2_en-us__p0103/: textlayer.json
gold/v1/inspiron-1100_setupguide2_en-us__p0105/: textlayer.json
gold/v1/inspiron-1100_setupguide_en-us__p0000/: textlayer.json
gold/v1/inspiron-1100_setupguide_en-us__p0001/: textlayer.json
gold/v1/inspiron-1120_connectivityguide4_en-us__p0006/: textlayer.json
gold/v1/inspiron-1120_connectivityguide4_en-us__p0017/: textlayer.json
gold/v1/inspiron-1120_connectivityguide4_en-us__p0020/: textlayer.json
gold/v1/inspiron-1120_servicemanual_en-us__p0007/: textlayer.json
gold/v1/inspiron-1120_setupguide_en-us__p0020/: textlayer.json
gold/v1/inspiron-1120_setupguide_en-us__p0074/: textlayer.json
gold/v1/inspiron-11z-intel-1120_servicemanual_en-us__p0022/: textlayer.json
gold/v1/inspiron-11z-intel-1120_servicemanual_en-us__p0035/: textlayer.json
gold/v1/inspiron-11z-intel-1120_setupguide_en-us__p0035/: textlayer.json
gold/v1/inspiron-11z-intel-1120_setupguide_en-us__p0041/: textlayer.json
gold/v1/inspiron-11z-intel-1120_setupguide_en-us__p0075/: textlayer.json
gold/v1/inspiron-11z_servicemanual_en-us__p0010/: textlayer.json
gold/v1/inspiron-11z_servicemanual_en-us__p0011/: textlayer.json
review/: __init__.py  app.py
review/static/: app.js  index.html  styles.css
scripts/: aws_s3_smoke.py  pull_model.sh
src/pipeline/: __init__.py  jobctx.py  manifest.py  refine.py  run.py  schema.py  storage.py  vlm.py
tests/: conftest.py  test_eval_crosscheck.py  test_eval_features.py  test_eval_landing_map.py  test_eval_materialize.py  test_eval_metrics.py  test_ingest.py  test_layout_detect.py  test_manifest.py  test_refine.py  test_review.py  test_smoke_e2e.py  test_stage_contract.py  test_storage.py  test_table.py
(+25 files in other folders)
