[project]
name = "cxpoc"
version = "0.1.0"
description = "Document parsing pipeline PoC — hybrid PDF-to-structured-JSON"
requires-python = ">=3.12"

# Dev dependencies: everything the walking skeleton needs. No models, no CUDA.
# These install fine on a macOS laptop (Apple Silicon or Intel).
dependencies = [
    "boto3>=1.34,<2",
    "jsonschema>=4.21,<5",
]

[project.optional-dependencies]
# Test-time tooling (still no models).
dev = [
    "pytest>=8.0,<9",
    "httpx>=0.27",       # FastAPI TestClient transport
]

# Human-in-the-loop review web tool (FastAPI + PDF.js). CPU-only, local dev aid.
# PDF.js is loaded from a CDN in the browser, so no JS deps here.
review = [
    "fastapi>=0.110",
    "uvicorn>=0.30",
]

# CPU-only parsing deps. Light, have macOS + manylinux wheels, no GPU needed.
# These power the real Stage 0 (PyMuPDF) and run fine on the Mac dev machine.
parse = [
    "pymupdf>=1.24",
    "pillow>=10.0",
    "numpy>=1.26",
]

# Layout/structure detection models. Heavier (torch), but CPU-capable and have
# macOS wheels — they run on the Mac dev machine for real Stage 1/2 work without
# a GPU. Superset of `parse`.
detect = [
    "cxpoc[parse]",
    "doclayout-yolo>=0.0.4",   # DocLayout-YOLO (vendors torch + ultralytics)
    "huggingface-hub>=0.23",   # pull detector weights
]

# Full GPU/VM stack. detect + the VLM client (the model itself is served by the
# vLLM sidecar container, not pip-installed here) + table structure (TATR).
gpu = [
    "cxpoc[detect]",
    "transformers>=4.44",      # TATR table structure (later slice)
    "timm>=1.0",               # TATR backbone
    "openai>=1.40",            # OpenAI-compatible client for the vLLM sidecar
]

[project.scripts]
cxpoc = "pipeline.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# "src" for the pipeline package; "." for the review/ web tool at repo root.
pythonpath = ["src", "."]
testpaths = ["tests"]
filterwarnings = [
    # PyMuPDF (SWIG) emits these on import; not actionable for us.
    "ignore:builtin type Swig.*:DeprecationWarning",
    "ignore:builtin type swigvarlink.*:DeprecationWarning",
    # thop (pulled by the YOLO stack) uses deprecated distutils.
    "ignore:distutils Version classes are deprecated.*:DeprecationWarning",
]
